# Epimetheus

./: .clang-format  CMakeList.txt  CMakeLists.txt  imgui.ini
cmake/: Install.cmake
demo/: CMakeLists.txt  app.hpp  main.cpp
dependancies/: CMakeLists.txt
src/: CMakeLists.txt  Install.cmake  cell.cpp  cell.hpp  dynamic_object.hpp  entity.hpp  grid.cpp  grid.hpp  group.hpp  main.cpp  parallel_iterator.hpp  particles.cpp  particles.hpp  system.hpp  timer.h  types.cpp  types.hpp
src/core/: app.hpp  buffer.hpp  component_group.hpp  entity.cpp  entity.hpp  group.hpp  hierarchy.cpp  hierarchy.hpp  input_handler.hpp  primitive_wrapper.hpp  slice.hpp
src/core/io/: app.cpp  app.hpp
src/core/multithreading/: thread_pool.hpp
src/debug/: debug.hpp  log.cpp  log.hpp
src/io/: app.cpp  app.hpp  event_handler.hpp
src/math/: aabb.hpp  geometry_func.cpp  geometry_func.hpp  math.hpp  math_defs.hpp  math_func.cpp  math_func.hpp  types.cpp  types.hpp
src/math/shapes/: AABB.hpp  concave_polygon.hpp
src/memory/: parallel_iterator.hpp  pool_allocator.hpp
src/multithreading/: thread_pool.hpp
src/physics/: col_utils.cpp  col_utils.hpp  collider.cpp  collider.hpp  material.hpp  physics_manager.cpp  physics_manager.hpp  restraint.cpp  restraint.hpp  rigidbody.cpp  rigidbody.hpp  solver.cpp  solver.hpp  transform.cpp  transform.hpp
src/scene/: component_group.hpp  debug_shape.cpp  debug_shape.hpp  entity.cpp  entity.hpp  scene.hpp  script.cpp  script.hpp  transform.cpp  transform.hpp
src/templates/: buffer.hpp  component_group.hpp  group.hpp  observer.hpp  primitive_wrapper.hpp  set.hpp
src/tests/: component_group_test.cpp  entity_test.cpp  group_test.cpp
src/utils/: map_key_intersection.hpp  set.hpp  stack_linked_list.hpp  time.hpp
test/: CMakeLists.txt  test_group.cpp
