set(SOURCE_FILES
    #main.cpp
    memory/pool_allocator.cpp
    debug/log.cpp
)
set(HEADER_FILES
    core/entity.hpp
    core/group.hpp
    core/slice.hpp
    core/primitive_wrapper.hpp
    memory/parallel_iterator.hpp
    memory/pool_allocator.hpp
    memory/allocator.hpp
    debug/log.hpp
    debug/debug.hpp
    utils/set.hpp
    utils/stack_linked_list.hpp
)
add_library(epimetheus
    ${SOURCE_FILES} ${HEADER_FILES}
)
include_directories(.)
