set(SOURCE_FILES
    #main.cpp
    types.cpp
    io/app.cpp
    debug/log.cpp
    math/math_func.cpp
    math/geometry_func.cpp
    physics/col_utils.cpp
    physics/physics_manager.cpp
    physics/restraint.cpp
    physics/rigidbody.cpp
    physics/solver.cpp
)
set(HEADER_FILES
    types.hpp
    core/entity.hpp
    core/group.hpp
    core/slice.hpp
    core/primitive_wrapper.hpp
    memory/parallel_iterator.hpp
    memory/pool_allocator.hpp
    memory/allocator.hpp
    debug/log.hpp
    debug/debug.hpp
    multithreading/thread_pool.hpp
    math/math_func.hpp
    math/math_defs.hpp
    math/math.hpp
    math/geometry_func.hpp
    io/app.hpp
    io/event_handler.hpp
    templates/buffer.hpp
    templates/component_group.hpp
    templates/set.hpp
    templates/stack_linked_list.hpp
    debug/log.hpp
    debug/debug.hpp
    physics/col_utils.hpp
    physics/physics_manager.hpp
    physics/restraint.hpp
    physics/rigidbody.hpp
    physics/solver.hpp
    physics/collider.hpp
    physics/material.hpp
    physics/transform.hpp
)
add_library(epimetheus
    ${SOURCE_FILES} ${HEADER_FILES}
)
include_directories(.)

add_compile_options(
    "$<$<CONFIG:RELEASE>:-o3>"
    "$<$<CONFIG:DEBUG>:-glldb>"
)
